--- a/Lianxi/src/main/res/layout/activity_main.xml
+++ b/Lianxi/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.myapplication.MainActivity">
+    tools:context="com.example.myapplication.view.activity.MainActivity">
     <EditText
         android:id="@+id/main_xingming"
         android:layout_width="match_parent"
